Added feature for updating a given pod deployment. Currently support is only present for updation of pod deployment replicas and image name and version.
