# models/pod_deployment.go
@@ -1,0 +1,98 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// PodDeployment A pod deployment to update
+//
+// swagger:model PodDeployment
+type PodDeployment struct {
+
+	// Provide the new image name, version.
+	// Required: true
+	Image *string `json:"image"`
+
+	// Provide the name of the pod deployment.
+	// Required: true
+	Name *string `json:"name"`
+
+	// Provide the number of replicas to modify.
+	// Required: true
+	Replicas *string `json:"replicas"`
+}
+
+// Validate validates this pod deployment
+func (m *PodDeployment) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateImage(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateName(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateReplicas(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *PodDeployment) validateImage(formats strfmt.Registry) error {
+
+	if err := validate.Required("image", "body", m.Image); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *PodDeployment) validateName(formats strfmt.Registry) error {
+
+	if err := validate.Required("name", "body", m.Name); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *PodDeployment) validateReplicas(formats strfmt.Registry) error {
+
+	if err := validate.Required("replicas", "body", m.Replicas); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PodDeployment) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PodDeployment) UnmarshalBinary(b []byte) error {
+	var res PodDeployment
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
