# restapi/operations/k8s_monitoring_tool/put_v1_pod_responses.go
@@ -1,0 +1,146 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package k8s_monitoring_tool
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"k8s-monitoring-tool/models"
+)
+
+// PutV1PodOKCode is the HTTP code returned for type PutV1PodOK
+const PutV1PodOKCode int = 200
+
+/*PutV1PodOK Pod deployment updated successfully.
+
+swagger:response putV1PodOK
+*/
+type PutV1PodOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.PodDeployment `json:"body,omitempty"`
+}
+
+// NewPutV1PodOK creates PutV1PodOK with default headers values
+func NewPutV1PodOK() *PutV1PodOK {
+
+	return &PutV1PodOK{}
+}
+
+// WithPayload adds the payload to the put v1 pod o k response
+func (o *PutV1PodOK) WithPayload(payload *models.PodDeployment) *PutV1PodOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the put v1 pod o k response
+func (o *PutV1PodOK) SetPayload(payload *models.PodDeployment) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PutV1PodOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// PutV1PodBadRequestCode is the HTTP code returned for type PutV1PodBadRequest
+const PutV1PodBadRequestCode int = 400
+
+/*PutV1PodBadRequest Bad Request, Unable to update pod deployment.
+
+swagger:response putV1PodBadRequest
+*/
+type PutV1PodBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewPutV1PodBadRequest creates PutV1PodBadRequest with default headers values
+func NewPutV1PodBadRequest() *PutV1PodBadRequest {
+
+	return &PutV1PodBadRequest{}
+}
+
+// WithPayload adds the payload to the put v1 pod bad request response
+func (o *PutV1PodBadRequest) WithPayload(payload *models.Error) *PutV1PodBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the put v1 pod bad request response
+func (o *PutV1PodBadRequest) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PutV1PodBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// PutV1PodInternalServerErrorCode is the HTTP code returned for type PutV1PodInternalServerError
+const PutV1PodInternalServerErrorCode int = 500
+
+/*PutV1PodInternalServerError Internal server error.
+
+swagger:response putV1PodInternalServerError
+*/
+type PutV1PodInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewPutV1PodInternalServerError creates PutV1PodInternalServerError with default headers values
+func NewPutV1PodInternalServerError() *PutV1PodInternalServerError {
+
+	return &PutV1PodInternalServerError{}
+}
+
+// WithPayload adds the payload to the put v1 pod internal server error response
+func (o *PutV1PodInternalServerError) WithPayload(payload *models.Error) *PutV1PodInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the put v1 pod internal server error response
+func (o *PutV1PodInternalServerError) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PutV1PodInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
